# serveur/routes/auth.ts
@@ -1,4 +1,4 @@
-// routes/auth.ts
+// serveur/routes/auth.ts
 import { Router, Request, Response, NextFunction } from 'express';
 import jwt from 'jsonwebtoken';
 import User from '../models/User';
@@ -16,7 +16,7 @@ router.post(
     // Vérifie si l'utilisateur existe déjà
     const existingUser = await User.findOne({ email });
     if (existingUser) {
-      res.status(400).json({ msg: 'Utilisateur déjà existant' });
+      res.status(401).json({ msg: 'Utilisateur déjà existant' });
       return;
     }
     
@@ -24,10 +24,11 @@ router.post(
     await user.save();
     
     // Génère le token
-    const payload = { user: { id: user.id } };
+    const payload = { user: { id: user._id, isAdmin: user.isAdmin } };
     const token = jwt.sign(payload, JWT_SECRET, { expiresIn: JWT_EXPIRES_IN });
     
-    res.json({ token });
+    // Retourne le token, l'id et l'avatar
+    res.status(201).json({ token, userId: user._id, avatar: user.avatar });
   })
 );
 
@@ -37,25 +38,24 @@ router.post(
   asyncHandler(async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     const { email, password } = req.body;
     
-    // Vérifie que l'utilisateur existe
     const user = await User.findOne({ email });
     if (!user) {
-      res.status(400).json({ msg: 'Identifiants invalides' });
+      res.status(401).json({ msg: 'Identifiants invalides' });
       return;
     }
     
-    // Vérifie le mot de passe
     const isMatch = await user.comparePassword(password);
     if (!isMatch) {
-      res.status(400).json({ msg: 'Identifiants invalides' });
+      res.status(401).json({ msg: 'Identifiants invalides' });
       return;
     }
     
-    // Génère le token
-    const payload = { user: { id: user.id } };
+    // Inclure isAdmin dans le payload
+    const payload = { user: { id: user._id, isAdmin: user.isAdmin } };
     const token = jwt.sign(payload, JWT_SECRET, { expiresIn: JWT_EXPIRES_IN });
     
-    res.json({ token });
+    // Retourne le token, l'id et l'avatar
+    res.status(201).json({ token, userId: user._id, avatar: user.avatar });
   })
 );
 
